--- a/src/components/wrapper/Wrapper.scss
+++ b/src/components/wrapper/Wrapper.scss
@@ -2,13 +2,8 @@
 
 .wrapper-page {
   position: relative;
-  background-color: $white;
-  background-image: url('../../assets/pattern-pice-grey.svg');
-  background-repeat: repeat;
-  background-origin: border-box;
-  background-position: top left;
   padding: 44px 49px;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   margin: 0;
 
