--- a/src/layaouts/Home/Home.scss
+++ b/src/layaouts/Home/Home.scss
@@ -1,6 +1,7 @@
 @import '../../styles/Index.scss';
 
 .home {
+  height: 100vh;
 
   @media screen and (max-width: $tablet-large-screen) {
     padding: 42px 40px 0 40px;
