--- a/src/layaouts/Home/Slider/Slider.scss
+++ b/src/layaouts/Home/Slider/Slider.scss
@@ -44,7 +44,7 @@
 }
 
 .promo__carousel-title {
-  @include asap-bold;
+  @include secondary-bold;
   font-size: 2rem;
   color: $black;
   margin-bottom: .5rem;
