--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -32,5 +32,6 @@ $quinary: #0075F2;
 $black-shadow: 0px 46px 28px rgba($color: $black, $alpha: .1);
 $primary-shadow: 0px 46px 28px rgba($color: $secondary, $alpha: .5);
 $secondary-shadow: 0px 4px 8px rgba($color: $secondary, $alpha: .15);
+$secondary-shadow--small: 0px 3px 9px rgba($color: darken($color: $secondary, $amount: 20), $alpha: 1);
 $secondary-shadow-hover: 0px 6px 8px rgba($color: $secondary, $alpha: .5);
 $tertiary-shadow: 0px 10px 28px rgba($color: $secondary, $alpha: .3);
