--- a/src/layaouts/Home/Footer/Footer.scss
+++ b/src/layaouts/Home/Footer/Footer.scss
@@ -8,7 +8,7 @@
   padding: .6rem 2rem;
   width: 100%;
   color: $black;
-  font-size: .8rem;
+  font-size: 1rem;
   background: $white;
 
   @media screen and (max-width: $tablet-large-screen){
