--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -5,6 +5,6 @@
 @mixin secondary-bold-subtitle {font: normal bold 1.2rem 'asap', sans-serif;}
 
 // PRIMARY FAMILY
-@mixin primary-normal {font: normal 300 16px 'Khula', sans-serif;}
-@mixin primary-normal-small {font: normal 400 .8rem 'Khula', sans-serif;}
-@mixin primary-bold {font: normal 900 1rem 'Khula', sans-serif;}
+@mixin primary-normal {font: normal 300 16px 'Work Sans', sans-serif;}
+@mixin primary-normal-small {font: normal 400 .8rem 'Work Sans', sans-serif;}
+@mixin primary-bold {font: normal 900 1rem 'Work Sans', sans-serif;}
