--- a/src/layaouts/Home/Home.scss
+++ b/src/layaouts/Home/Home.scss
@@ -4,7 +4,7 @@
   height: 100vh;
 
   @media screen and (max-width: $tablet-large-screen) {
-    padding: 42px 40px 0 40px;
+    padding: 0 40px 0 40px;
   }
 
   @media screen and (max-width: $tablet-regular-screen) {
